[package]
name = "ceramic-pocket-knife"
description = "CLI multitool for Ceramic IDs and data"
version = "0.1.0"
edition = "2021"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
license = "MIT"
keywords = ["ceramic", "encoding", "multiformat", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/nathanielc/ceramic-pocket-knife"

[[bin]]
name = "cpk"

[features]
default = ["ceramic", "ipld", "multibase", "multihash", "p2p"]
ceramic = [
    "dep:ceramic-core",
    "dep:recon",
    "dep:multibase",
    "dep:multihash",
    "dep:sqlx",
    "dep:cid",
    "dep:libp2p-identity",
]
ipld = ["dep:libipld", "dep:cid", "dep:dag-jose", "dep:multihash"]
multibase = ["dep:multibase"]
multihash = ["dep:multihash"]
p2p = ["dep:libp2p", "dep:libp2p-identity"]

[dependencies]
anyhow = "1"
ceramic-core = { git = "https://github.com/3box/rust-ceramic", branch = "main", optional = true }
recon = { git = "https://github.com/3box/rust-ceramic", branch = "main", optional = true }
cid = { version = "0.10", optional = true }
clap = { version = "4", features = ["derive"] }
clap_complete_command = "0.5.1"
libp2p-identity = { version = "0.1.2", features = [
    "peerid",
    "ed25519",
], optional = true }
multibase = { version = "0.9", optional = true }
multihash = { version = "0.18.1", optional = true }
multicodec = { version = "0.1.0", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
sqlx = { version = "=0.7.0", features = [
    "sqlite",
    "runtime-tokio",
], optional = true }
tokio = { version = "1.32", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
] }
hex = "0.4.3"
libipld = { version = "0.16.0", optional = true }
dag-jose = { version = "0.1.3", optional = true }
libp2p = { version = "0.53", features = [
    "dns",
    "ed25519",
    "identify",
    "noise",
    "ping",
    "quic",
    "rsa",
    "tcp",
    "tls",
    "tokio",
    "websocket",
    "yamux",
], optional = true }
env_logger = "0.10.0"
futures = "0.3.29"

[build-dependencies]
clap = { version = "4", features = ["derive"] }

# Uncomment these lines to use a local copy of rust-ceramic
#[patch."https://github.com/3box/rust-ceramic"]
#ceramic-core = { path = "../rust-ceramic/core" }
#recon = { path = "../rust-ceramic/recon" }
